Functional content presentation
Content is presented well on the front-end
(haven't added the drag & drop to panel yet)

- Synced styleguide CSS with kirby.
- Added seperate tags for figure vs img tag
- JS & scss compiled with webpack now

--- a/assets/styleguide/modules/_site-header.html
+++ b/assets/styleguide/modules/_site-header.html
@@ -1,2 +1,2 @@
 
-<h1 class="site-header"><a href="/styleguide/index.html">The Curtistan Style guide</a></h1>
+<h1 class="site-header"><a class="site-header__a" href="/styleguide/index.html">The Curtistan Style guide</a></h1>
