--- a/assets/styleguide/index.html
+++ b/assets/styleguide/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Curtisland styleguide</title>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="style/style.css"/>
   </head>
   <body>
     <div class="l__site-header">
-      <h1 class="site-header"><a href="/styleguide/index.html">The Curtistan Style guide</a></h1>
+      <h1 class="site-header"><a class="site-header__a" href="/styleguide/index.html">The Curtistan Style guide</a></h1>
       <div class="l__site-nav"></div>
     </div>
     <div class="project-item l__fixed-box">
